// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> should match snapshot for default heading 1`] = `
<h1
  className="root Heading1"
  size="heading-1"
>
  Hello World!
</h1>
`;

exports[`<Heading /> should match snapshot for default heading 1 1`] = `
<h1
  className="root Heading1"
  size="heading-1"
/>
`;

exports[`<Heading /> should match snapshot for default heading 2 1`] = `
<h2
  className="root Heading2"
  size="heading-2"
/>
`;

exports[`<Heading /> should match snapshot for default heading 3 1`] = `
<h3
  className="root Heading3"
  size="heading-3"
/>
`;

exports[`<Heading /> should match snapshot for default heading 4 1`] = `
<h4
  className="root Heading4"
  size="heading-4"
/>
`;

exports[`<Heading /> should match snapshot for default heading 5 1`] = `
<h5
  className="root Heading5"
  size="heading-5"
/>
`;

exports[`<Heading /> should match snapshot for default heading 6 1`] = `
<h6
  className="root Heading6"
  size="heading-6"
/>
`;

exports[`<Heading /> should match snapshot for default mobile heading 1`] = `
<h1
  className="root Heading1 variantMobile"
  size="heading-1"
>
  Hello World!
</h1>
`;

exports[`<Heading /> when loading should match snapshot for loading view 1`] = `
<LoadingBoxComponent
  blinking={true}
  className="root loaderHeading1"
  randomWidth={false}
/>
`;
